--- a/app/mini_app/index.html
+++ b/app/mini_app/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div class="container">
-        <img src="assets/logo.png" alt="Логотип бота" class="logo">
         <h1>Управление ботом</h1>
         <button id="generateText">Сгенерировать текст</button>
         <button id="generateImage">Сгенерировать изображение</button>
